objects/custom_object1__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>custom_object1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>custom_object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom_object1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>